--- a/src/konto.html
+++ b/src/konto.html
@@ -9,12 +9,14 @@
 <body class="min-w-fit bg-peach p-0 font-podimo">
     <header class="m-8">
         <nav class="flex justify-between">
-          <img class="max-h-6" src="/img/logo.svg" alt="">
-          <h3 class="md:hidden">UDFORSK VORES PODCASTS</h3>
-          <a class="md:hidden" href="abonnement.html"><h3>SE ABONNEMENTER</h3></a>
-          <a href="abonnement.html"><button class="bg-orange py-1 px-3 rounded-rounded text-white">PRØV GRATIS</button></a>
+          <div class="flex gap-8 w-full">
+            <img class="max-h-6" src="/img/logo.svg" alt="podimo">
+            <h3 class="md:hidden hover:underline">UDFORSK VORES PODCASTS</h3>
+            <a class="md:hidden hover:underline" href="abonnement.html"><h3>SE ABONNEMENTER</h3></a>
+          </div>
+          <a href="abonnement.html"><button class="w-40 bg-orange py-2 px-4 rounded-rounded text-white">PRØV GRATIS</button></a>
         </nav>
-    </header>
+      </header>
 
     <main>
         <section class="m-6">
