--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -8,77 +8,81 @@
     <title>Vælg abonnement</title>
 </head>
 <body class="min-w-fit bg-peach p-0 font-podimo">
-    <header class="m-8">
-        <nav class="flex justify-between">
-          <img class="max-h-6" src="/img/logo.svg" alt="">
-          <h3 class="md:hidden">UDFORSK VORES PODCASTS</h3>
-          <a class="md:hidden" href="abonnement.html"><h3>SE ABONNEMENTER</h3></a>
-          <a href="abonnement.html"><button class="bg-orange py-1 px-3 rounded-rounded text-white">PRØV GRATIS</button></a>
-        </nav>
-    </header>
+  <header class="m-8">
+    <nav class="flex justify-between">
+      <div class="flex gap-8 w-full">
+        <img class="max-h-6" src="/img/logo.svg" alt="podimo">
+        <h3 class="md:hidden hover:underline">UDFORSK VORES PODCASTS</h3>
+        <a class="md:hidden hover:underline" href="abonnement.html"><h3>SE ABONNEMENTER</h3></a>
+      </div>
+      <a href="abonnement.html"><button class="w-40 bg-orange py-2 px-4 rounded-rounded text-white">PRØV GRATIS</button></a>
+    </nav>
+  </header>
     
     <main>
-        <section id="section_4" class="m-8">
-            <div>
-                <a class="flex gap-2" href="index.html">
-                    <img src="/img/icon.svg" alt="">
-                    <p>Tilbage</p>
-                </a>
+      <section class="m-6">
+        <a class="flex gap-2" href="index.html">
+            <img src="/img/icon.svg" alt="">
+            <p>Tilbage</p>
+        </a>
+    </section>
+      <section id="section_4" class="m-8">
+        <div class="grid justify-center gap-12">
+          <div class="grid justify-center mb-6">
+            <div class="w-96 bg-neon-orange p-8 rounded-tl-half-rounded rounded-tr-half-rounded text-center">
+              <h3 class="text-h3">
+                Premium
+                <br>
+                <br>
+                <span class="text-h2">59</span>
+                /md.
+                <br>
+                <br>
+                30 dages gratis prøveperiode
+              </h3>
             </div>
+            <div class="w-96 bg-white p-8 rounded-bl-half-rounded rounded-br-half-rounded">
+            <ul class="list-disc marker:text-neon-orange">
+              <li>Ubegrænset adgang til alle podcasts</li>
+              <br>
+              <li>Nye eksklusive podcasts hver uge</li>
+              <br>
+              <li>Ubegrænset lytning til lydbøger</li>
+            </ul>
+            <div class="grid justify-center pt-12">
+              <a href="konto.html"><button class="w-60 bg-orange p-2 rounded-rounded text-white">TILMELD PREMIUM</button></a>
+            </div>
+            </div>
+          </div>
 
-            <div class="grid lg:grid-cols-2">
-              <div class="grid justify-center mb-6">
-                <div class="w-96 bg-neon-orange p-8 rounded-tl-half-rounded rounded-tr-half-rounded text-center">
-                  <h3 class="text-h3">
-                    Premium
-                    <br>
-                    <br>
-                    <span class="text-h2">59</span>
-                    /md.
-                    <br>
-                    <br>
-                    30 dages gratis prøveperiode
-                  </h3>
-                </div>
-                <div class="w-96 bg-white p-8 rounded-bl-half-rounded rounded-br-half-rounded">
-                <ul>
-                  <li>Ubegrænset adgang til alle podcasts</li>
-                  <br>
-                  <li>Nye eksklusive podcasts hver uge</li>
-                  <br>
-                  <li>Ubegrænset lytning til lydbøger</li>
-                </ul>
-                </div>
-              </div>
-    
-              <div class="grid justify-center mb-6 pointer-events-auto">
-                <div class="w-96 bg-dark-purple p-8 rounded-tl-half-rounded rounded-tr-half-rounded text-center text-white">
-                  <h3 class="text-h3">
-                    Premium Plus
-                    <br>
-                    <br>
-                    <span class="text-h2">109</span>
-                    /md.
-                    <br>
-                    <br>
-                    30 dages gratis prøveperiode
-                  </h3>
-                </div>
-                <div class="w-96 bg-white p-8 rounded-bl-half-rounded rounded-br-half-rounded">
-                  <ul>
-                    <li>Ubegrænset adgang til alle podcasts</li>
-                    <br>
-                    <li>Nye eksklusive podcasts hver uge</li>
-                    <br>
-                    <li>Ubegrænset lytning til lydbøger</li>
-                  </ul>
-                </div>
+          <div class="grid justify-center mb-6 lg:col-start-3">
+            <div class="w-96 bg-dark-purple p-8 rounded-tl-half-rounded rounded-tr-half-rounded text-center text-white">
+              <h3 class="text-h3">
+                Premium Plus
+                <br>
+                <br>
+                <span class="text-h2">109</span>
+                /md.
+                <br>
+                <br>
+                30 dages gratis prøveperiode
+              </h3>
+            </div>
+            <div class="w-96 bg-white p-8 rounded-bl-half-rounded rounded-br-half-rounded">
+              <ul class="list-dis marker:text-dark-purple">
+                <li>Ubegrænset adgang til alle podcasts</li>
+                <br>
+                <li>Nye eksklusive podcasts hver uge</li>
+                <br>
+                <li>Ubegrænset lytning til lydbøger</li>
+              </ul>
+              <div class="grid justify-center pt-12">
+                <a href="konto.html"><button class="w-60 bg-orange p-2 rounded-rounded text-white">TILMELD PREMIUM PLUS</button></a>
               </div>
             </div>
-            <div class="grid justify-center">
-              <a href="konto.html"><button class="w-60 bg-orange p-2 rounded-rounded text-white">FORTSÆT</button></a>
-            </div>
-          </section>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script type="module" src="./main.js"></script>       
