--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,12 @@
 
     <header class="m-8">
       <nav class="flex justify-between">
-        <img class="max-h-6" src="/img/logo.svg" alt="">
-        <h3 class="md:hidden">UDFORSK VORES PODCASTS</h3>
-        <a class="md:hidden" href="abonnement.html"><h3>SE ABONNEMENTER</h3></a>
-        <a href="abonnement.html"><button class="bg-orange py-1 px-3 rounded-rounded text-white">PRØV GRATIS</button></a>
+        <div class="flex gap-8 w-full">
+          <img class="max-h-6" src="/img/logo.svg" alt="podimo">
+          <h3 class="md:hidden hover:underline">UDFORSK VORES PODCASTS</h3>
+          <a class="md:hidden hover:underline" href="abonnement.html"><h3>SE ABONNEMENTER</h3></a>
+        </div>
+        <a href="abonnement.html"><button class="w-40 bg-orange py-2 px-4 rounded-rounded text-white">PRØV GRATIS</button></a>
       </nav>
     </header>
 
@@ -32,7 +34,7 @@
               sommeren
             </span>
           </h1>
-          <p class="text-p text-dark-purple text-center lg:text-start">
+          <p class="text-p text-dark-purple text-center lg:text-start pt-4">
             Med et Podimo abonnement kan du lytte til
             <br>
             tusindvis af podcasts
@@ -78,8 +80,8 @@
       
         
       <section id="section_4" class="m-8">
-        <div class="grid lg:grid-cols-7">
-          <div class="grid justify-center mb-6 lg:col-start-3">
+        <div class="grid justify-center gap-12">
+          <div class="grid justify-center mb-6">
             <div class="w-96 bg-neon-orange p-8 rounded-tl-half-rounded rounded-tr-half-rounded text-center">
               <h3 class="text-h3">
                 Premium
@@ -93,17 +95,20 @@
               </h3>
             </div>
             <div class="w-96 bg-white p-8 rounded-bl-half-rounded rounded-br-half-rounded">
-            <ul>
+            <ul class="list-disc marker:text-neon-orange list-inside">
               <li>Ubegrænset adgang til alle podcasts</li>
               <br>
               <li>Nye eksklusive podcasts hver uge</li>
               <br>
-              <li>Ubegrænset lytning til lydbøger</li>
+              <li>10 timers lydbøger hver måned</li>
             </ul>
+            <div class="grid justify-center pt-12">
+              <a href="abonnement.html"><button class="w-60 bg-orange p-2 rounded-rounded text-white">TILMELD PREMIUM</button></a>
+            </div>
             </div>
           </div>
 
-          <div class="grid justify-center mb-6 lg:col-start-5">
+          <div class="grid justify-center mb-6 lg:col-start-3">
             <div class="w-96 bg-dark-purple p-8 rounded-tl-half-rounded rounded-tr-half-rounded text-center text-white">
               <h3 class="text-h3">
                 Premium Plus
@@ -117,18 +122,18 @@
               </h3>
             </div>
             <div class="w-96 bg-white p-8 rounded-bl-half-rounded rounded-br-half-rounded">
-              <ul>
+              <ul class="list-disc marker:text-dark-purple">
                 <li>Ubegrænset adgang til alle podcasts</li>
                 <br>
                 <li>Nye eksklusive podcasts hver uge</li>
                 <br>
                 <li>Ubegrænset lytning til lydbøger</li>
               </ul>
+              <div class="grid justify-center pt-12">
+                <a href="abonnement.html"><button class="w-60 bg-orange p-2 rounded-rounded text-white">TILMELD PREMIUM PLUS</button></a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="grid justify-center">
-          <a href="abonnement.html"><button class="w-60 bg-orange p-2 rounded-rounded text-white">TILMELD</button></a>
         </div>
       </section>
     </main>
